apps/staging/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mealie.christophervestman.com
      secretName: mealie-tls
  rules:
    - host: mealie.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 80
            path: /
            pathType: Prefix
